--- a/ubatuba.html
+++ b/ubatuba.html
@@ -10,7 +10,7 @@
 
     <!-- Navbar fixa (Mesma navbar da página principal) -->
     <div class="navbar">
-        <div>Apartamento Ubatuba</div>
+        <div>Hospedagem</div>
         <div>
             <a href="index.html#sobre">Sobre</a>
             <a href="index.html#fotos">Fotos</a>
